Inclusão do funcionário.

--- a/LocadoraVeiculos/Views/Shared/_Layout.cshtml
+++ b/LocadoraVeiculos/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Carros", "Index", "Carros")</li>
                     <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                     <li>@Html.ActionLink("Aluguéis", "Index", "Alugueis")</li>
+                    <li>@Html.ActionLink("Funcionários", "Index", "Funcionarios")</li>
+                    @*<li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos")</li>*@
                 </ul>
             </div>
         </div>
