Alteração das Views para incluir os novos campos

--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Delete.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Delete.cshtml
@@ -44,6 +44,22 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.DataAlteracao)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DataAlteracao)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StatusFinanceiro)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StatusFinanceiro)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
