--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Create.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Create.cshtml
@@ -49,6 +49,22 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.DataAlteracao, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DataAlteracao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DataAlteracao, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StatusFinanceiro, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.StatusFinanceiro, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StatusFinanceiro, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
