--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Details.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Details.cshtml
@@ -43,6 +43,22 @@
             @Html.DisplayFor(model => model.Status)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.DataAlteracao)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DataAlteracao)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StatusFinanceiro)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StatusFinanceiro)
+        </dd>
+
     </dl>
 </div>
 <p>
