--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Index.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Index.cshtml
@@ -24,6 +24,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.DataAlteracao)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StatusFinanceiro)
+        </th>
         <th></th>
     </tr>
 
@@ -40,6 +46,12 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Status)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.DataAlteracao)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.StatusFinanceiro)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
