Alteração do status do carro ao realizar o aluguel.

--- a/LocadoraVeiculos/Views/Carros/Index.cshtml
+++ b/LocadoraVeiculos/Views/Carros/Index.cshtml
@@ -39,6 +39,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Quilomeatragem)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Status)
+        </th>
         <th></th>
     </tr>
 
@@ -72,9 +75,12 @@
             @Html.DisplayFor(modelItem => item.Quilomeatragem)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.Status)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
