--- a/LocadoraVeiculos/Views/Clientes/Index.cshtml
+++ b/LocadoraVeiculos/Views/Clientes/Index.cshtml
@@ -33,6 +33,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Tipo)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.StatusCadastro)
+        </th>
         <th></th>
     </tr>
 
@@ -60,9 +63,16 @@
             @Html.DisplayFor(modelItem => item.Tipo)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.StatusCadastro)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+            @if (item.StatusCadastro == LocadoraVeiculos.Models.StatusCadastro.Solicitado)
+            {
+                @Html.ActionLink("Confirmar", "Confirmar", new { id = item.Id })
+            }
         </td>
     </tr>
 }
