Ajuste no cadastro do aluguel

--- a/LocadoraVeiculos/Views/Alugueis/Delete.cshtml
+++ b/LocadoraVeiculos/Views/Alugueis/Delete.cshtml
@@ -29,11 +29,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Data)
+            @Html.DisplayNameFor(model => model.DataInicial)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Data)
+            @Html.DisplayFor(model => model.DataInicial)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DataFinal)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DataFinal)
         </dd>
 
         <dt>
