--- a/LocadoraVeiculos/Views/Shared/_Layout.cshtml
+++ b/LocadoraVeiculos/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Glória a Deux</p>
         </footer>
     </div>
 
