--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Delete.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Delete.cshtml
@@ -1,15 +1,15 @@
 ﻿@model WebServiceClientes.Models.CustomerModel
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Exclusão de Cliente";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Exclusão</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que quer excluir este cliente?</h3>
 <div>
-    <h4>CustomerModel</h4>
+    <h4>Cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,7 +57,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StatusFinanceiro)
+            @Html.DisplayFor(model => model.DescricaoStatusFinanceiro)
         </dd>
 
     </dl>
@@ -66,7 +66,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
