--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Details.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Details.cshtml
@@ -1,14 +1,14 @@
 ﻿@model WebServiceClientes.Models.CustomerModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalhes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>CustomerModel</h4>
+    <h4>Cliente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -56,12 +56,12 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.StatusFinanceiro)
+            @Html.DisplayFor(model => model.DescricaoStatusFinanceiro)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Voltar para a lista", "Index")
 </p>
