--- a/WebServiceClientes/WebServiceClientes/Views/Customer/Index.cshtml
+++ b/WebServiceClientes/WebServiceClientes/Views/Customer/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<WebServiceClientes.Models.CustomerModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista de Clientes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Lista</h2>
 
 <p>
     @Html.ActionLink("Novo", "Create")
@@ -54,9 +54,9 @@
             @Html.DisplayFor(modelItem => item.DescricaoStatusFinanceiro)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Excluir", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
